--- a/README
+++ b/README
@@ -13,7 +13,12 @@ cp vundle-vim/.vimrc ~/.vimrc
 二.可能存在的问题：
 1)powerline乱码问题
 默认没有带字体，所以需要自己下载字体。
-在https://github.com/Lokaltog/vim-powerline/wiki/Patched-fonts 选择字体下载到~/.fonts目录即可。
+#在https://github.com/Lokaltog/vim-powerline/wiki/Patched-fonts 选择字体下载到~/.fonts目录即可。
+目前作者已经更换项目了，我将Ubuntu的默认字体文件放置在.fonts文件夹下，可以直接复制
+cp -r vundle-vim/.fonts ~/.fonts
+fv-cache -vf
+#其他字体需要说明操作
+https://powerline.readthedocs.org/en/latest/installation/linux.html#font-installation
 
 2)Command-t安装问题
 错误：`require’: no such file to load — mkmf (LoadError)'
