--- a/README
+++ b/README
@@ -20,6 +20,7 @@ fv-cache -vf
 tmux：
 cp -r vim-tmux/.tmux ~
 git clone https://github.com/erikw/tmux-powerline.git
+cp -r tmux-powerline ~/.tmux
 cp vim-tmux/.tmux.conf ~/.tmux.conf
 cp vim-tmux/.tmux-powerlinerc ~/.tmux-powerlinerc
 
